--- a/viewport.html
+++ b/viewport.html
@@ -1,61 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
+body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    background: url('pc.jpg') no-repeat center center fixed;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    text-align: center;
+}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zulhakimi Portfolio Home</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=League+Spartan:wght@400;700&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Brush+Script+MT&display=swap">
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background: url('pc.jpg') no-repeat center center fixed;
-            background-size: cover;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            text-align: center;
-        }
+h1 {
+    font-family: 'Brush Script MT', cursive;
+    color: #00FFFF;
+    font-size: 36px;
+    margin-bottom: 20px;
+}
 
-        h1 {
-            font-family: 'Brush Script MT', cursive;
-            color: #00FFFF;
-            font-size: 36px;
-            margin-bottom: 20px;
-        }
+a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 24px;
+    font-weight: bold;
+    padding: 20px;
+    background-color: #3498db;
+    border-radius: 8px;
+    transition: background-color 0.3s ease;
+}
 
-        a {
-            text-decoration: none;
-            color: #fff;
-            font-size: 24px;
-            font-weight: bold;
-            padding: 20px;
-            background-color: #3498db;
-            border-radius: 8px;
-            transition: background-color 0.3s ease;
-        }
+a:hover {
+    background-color: #2980b9;
+}
 
-        a:hover {
-            background-color: #2980b9;
-        }
+/* Add styling for the GIF container */
+.gif-container {
+    margin-top: 20px;
+    max-width: 100%; /* Make the container responsive */
+}
 
-        /* Add styling for the GIF container */
-        .gif-container {
-            margin-top: 20px;
-            max-width: 190mm;
-            max-height: 80mm;
-        }
+/* Adjust the size of the GIF */
+.gif-container img {
+    width: 100%;
+    height: auto; /* Maintain the aspect ratio */
+    max-height: 80vh; /* Set a maximum height for the image */
+}
 
-        /* Adjust the size of the GIF */
-        .gif-container img {
-            width: 100%;
-            height: 100%;
-        }
     </style>
 </head>
 
