--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>My Website</title>
+  <style>
+    body {
+      text-align: center; /* Center-align the content */
+    }
+
+    a {
+      display: block; /* Make each link a block element */
+      margin: 10px; /* Add margin for spacing */
+      font-size: 36px; /* Set the font size to 36 */
+      color: black; /* Set the text color to black */
+      text-decoration: none; /* Remove underline from links */
+    }
+  </style>
 </head>
 <body>
   <!-- Link to other HTML files -->
-  <a href="Portfolio.html">About</a>
-  <a href="page2.html">project</a>
-  <a href="viewport.html">home</a>
+  <a href="viewport.html">HOME</a>
+  <a href="Porfolio.html">ABOUT</a>
+  <a href="page2.html">PROJECT</a>
 
   <!-- Content from other HTML files will be loaded here by GitHub Pages -->
 </body>
