--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     a {
       display: block; /* Make each link a block element */
       margin: 10px; /* Add margin for spacing */
-      font-size: 72px; /* Set the font size to 36 */
+      font-size: 72px; /* Set the font size to 72 */
       color: black; /* Set the text color to black */
       text-decoration: none; /* Remove underline from links */
+      line-height: 100px; /* Set line-height to match the height */
+      height: 100px; /* Set the height of each link */
     }
   </style>
 </head>
