--- a/index.html
+++ b/index.html
@@ -8,22 +8,29 @@
       text-align: center; /* Center-align the content */
     }
 
+    nav {
+      display: flex;
+      justify-content: center;
+      background-color: #f2f2f2; /* Set background color for the navigation bar */
+      padding: 10px; /* Add padding for spacing */
+    }
+
     a {
-      display: block; /* Make each link a block element */
-      margin: 10px; /* Add margin for spacing */
-      font-size: 72px; /* Set the font size to 72 */
-      color: black; /* Set the text color to black */
+      display: inline-block; /* Make each link an inline-block element */
+      margin: 0 20px; /* Add margin for spacing */
+      font-size: 24px; /* Set the font size */
+      color: black; /* Set the text color */
       text-decoration: none; /* Remove underline from links */
-      line-height: 100px; /* Set line-height to match the height */
-      height: 100px; /* Set the height of each link */
     }
   </style>
 </head>
 <body>
-  <!-- Link to other HTML files -->
-  <a href="viewport.html">HOME</a>
-  <a href="Porfolio.html">ABOUT</a>
-  <a href="page2.html">PROJECT</a>
+  <!-- Navigation Bar -->
+  <nav>
+    <a href="viewport.html">Home</a>
+    <a href="Porfolio.html">About</a>
+    <a href="page2.html">Project</a>
+  </nav>
 
   <!-- Content from other HTML files will be loaded here by GitHub Pages -->
 </body>
