--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
       font-size: 24px; /* Set the font size */
       color: black; /* Set the text color */
       text-decoration: none; /* Remove underline from links */
+      padding: 10px 20px; /* Add padding to create a button-like appearance */
+      border: 2px solid #3498db; /* Add border for button-like styling */
+      border-radius: 8px; /* Add border-radius for rounded corners */
+      transition: background-color 0.3s ease; /* Add transition for hover effect */
+    }
+
+    a:hover {
+      background-color: #3498db; /* Change background color on hover */
+      color: white; /* Change text color on hover */
     }
   </style>
 </head>
@@ -28,8 +37,6 @@
   <!-- Navigation Bar -->
   <nav>
     <a href="viewport.html">Home</a>
-    <a href="Porfolio.html">About</a>
-    <a href="page2.html">Project</a>
   </nav>
 
   <!-- Content from other HTML files will be loaded here by GitHub Pages -->
