--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
       background-color: #3498db; /* Change background color on hover */
       color: white; /* Change text color on hover */
     }
+
+    .description {
+      margin-top: 20px; /* Add margin at the top */
+      font-size: 18px; /* Set the font size for the description */
+    }
   </style>
 </head>
 <body>
@@ -38,6 +43,11 @@
   <nav>
     <a href="viewport.html">Home</a>
   </nav>
+
+  <!-- Description -->
+  <div class="description">
+    Please click this button to go to ZULHAKIMI PORTFOLIO.
+  </div>
 
   <!-- Content from other HTML files will be loaded here by GitHub Pages -->
 </body>
